--- a/BotAI/BotAI.csproj
+++ b/BotAI/BotAI.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Rudzoft.ChessLib" Version="0.0.3" />
+  </ItemGroup>
+
 </Project>
