--- a/BoardManager/BoardManager.csproj
+++ b/BoardManager/BoardManager.csproj
@@ -7,4 +7,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="EasyNetQ" Version="7.5.2" />
+  </ItemGroup>
+
 </Project>
