--- a/BotAI/BotAI.csproj
+++ b/BotAI/BotAI.csproj
@@ -8,7 +8,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EasyNetQ" Version="7.5.2" />
     <PackageReference Include="Rudzoft.ChessLib" Version="0.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SharedDTOs\SharedDTOs.csproj" />
   </ItemGroup>
 
 </Project>
