--- a/BoardManager/BoardManager.csproj
+++ b/BoardManager/BoardManager.csproj
@@ -11,4 +11,8 @@
     <PackageReference Include="EasyNetQ" Version="7.5.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\SharedDTOs\SharedDTOs.csproj" />
+  </ItemGroup>
+
 </Project>
