--- a/GameManager/GameManager.csproj
+++ b/GameManager/GameManager.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="EasyNetQ" Version="7.5.2" />
+    <PackageReference Include="Rudzoft.ChessLib" Version="0.0.3" />
   </ItemGroup>
 
 </Project>
