--- a/GameManager/GameManager.csproj
+++ b/GameManager/GameManager.csproj
@@ -12,4 +12,12 @@
     <PackageReference Include="Rudzoft.ChessLib" Version="0.0.3" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\SharedDTOs\SharedDTOs.csproj" />
+  </ItemGroup>
+
 </Project>
