--- a/BoardManager/BoardManager.csproj
+++ b/BoardManager/BoardManager.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
     <PackageReference Include="EasyNetQ" Version="7.5.2" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 
   <ItemGroup>
