ApiClient for updating GUI added

--- a/BoardManager/BoardManager.csproj
+++ b/BoardManager/BoardManager.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="EasyNetQ" Version="7.5.2" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="RestSharp" Version="110.2.0" />
   </ItemGroup>
 
   <ItemGroup>
