Tracing implemendet for Games Manager

--- a/SharedDTOs/SharedDTOs.csproj
+++ b/SharedDTOs/SharedDTOs.csproj
@@ -7,6 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="EasyNetQ" Version="7.5.2" />
+    <PackageReference Include="OpenTelemetry" Version="1.4.0" />
+    <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.4.0" />
+    <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.4.0" />
     <PackageReference Include="Rudzoft.ChessLib" Version="0.0.3" />
   </ItemGroup>
 
