--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,3 +56,15 @@ services:
       dockerfile: GameManager/Dockerfile
     volumes:
       - ./cloudAMQPConnectionString.txt:/app/cloudAMQPConnectionString.txt
+
+  jaeger:
+    image: jaegertracing/all-in-one:1.6
+    container_name: jaeger
+    ports:
+      - 5775:5775/udp
+      - 6831:6831/udp
+      - 6832:6832/udp
+      - 5778:5778
+      - 16686:16686
+      - 14268:14268
+      - 9411:9411
