--- a/SharedDTOs/SharedDTOs.csproj
+++ b/SharedDTOs/SharedDTOs.csproj
@@ -15,7 +15,7 @@
     <PackageReference Include="Serilog" Version="3.0.0-dev-01998" />
     <PackageReference Include="Serilog.Enrichers.Span" Version="3.1.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.1-dev-00910" />
-    <PackageReference Include="Serilog.Sinks.Grafana.Loki" Version="8.1.0" />
+    <PackageReference Include="Serilog.Sinks.Loki" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
