--- a/SharedDTOs/SharedDTOs.csproj
+++ b/SharedDTOs/SharedDTOs.csproj
@@ -8,12 +8,14 @@
 
   <ItemGroup>
     <PackageReference Include="EasyNetQ" Version="7.5.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0-preview.4.23259.5" />
     <PackageReference Include="OpenTelemetry" Version="1.4.0" />
     <PackageReference Include="OpenTelemetry.Exporter.Console" Version="1.4.0" />
     <PackageReference Include="OpenTelemetry.Exporter.Jaeger" Version="1.4.0" />
     <PackageReference Include="Rudzoft.ChessLib" Version="0.0.3" />
     <PackageReference Include="Serilog" Version="3.0.0-dev-01998" />
     <PackageReference Include="Serilog.Enrichers.Span" Version="3.1.0" />
+    <PackageReference Include="Serilog.Extensions.Logging" Version="7.0.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.1-dev-00910" />
     <PackageReference Include="Serilog.Sinks.Loki" Version="3.0.0" />
   </ItemGroup>
